--- a/vignettes/faustIntro.Rmd
+++ b/vignettes/faustIntro.Rmd
@@ -120,8 +120,9 @@ plot(gs[[1]],  boolean = TRUE)
 
 ## `FAUST` step two: specify the experimental unit of anlaysis.
 
-The first parameter the user must set to use the `FAUST` method is called `pDataVar2ConcatenateSamples`.
-This parameter specifies how samples in the experiment should be combined in order for `FAUST` to perform the gating.
+The first parameter the user must set to use the `FAUST` method is called `experimentalUnit`.
+This parameter specifies how samples in the experiment should be combined in order for `FAUST` to perform discovery and
+annotation.
 In other words, this parameter defines the experimental unit of analysis.
 
 The samples should usually be combined so that they represent relatively homogeneous collections of samples. 
@@ -129,22 +130,20 @@ What constitutes a homogeneous collection depends on the experimental context.
 As examples, data could not be combined at all and analyzed by individual sample; 
 they could be grouped by subject, so that all samples from a subject are analyzed together; 
 they could be grouped by batch so all samples in a batch are combined;
-or they could be combined by stimulation so that all samples under common stimulation are analyzed together; or they could be combined so all samples in the experiment are analyzed as a homogeneous group. 
+or they could be combined by stimulation so that all samples under common stimulation are analyzed together;
+or they could be combined so all samples in the experiment are analyzed as a homogeneous group. 
 
-Here we run `FAUST` at the sample level, so that each sample is analyzed separately.
-The gating set data structure contains expermental metadata, accessed through the `pData` method.
+Here we run `FAUST` at the individual sample level (which is its default setting),
+so that each sample is analyzed separately.
+The gating set data structure contains experimental metadata, accessed through the `pData` method.
 When applied to a gating set, `pData(gs)` returns a data frame of experimental metadata.
-The `FAUST` parameter `pDataVar2ConcatenateSamples` must be set to one of the column names in the `pData(gs)` data frame.
+The `FAUST` parameter `experimentalUnit` must be set to one of the column names in the `pData(gs)` data frame.
 `FAUST` will use this parameter to concatenate experimental samples prior to conducting discovery and annotation.
 To run `FAUST` at the sample level, we will set this parameter to "name".
 
-```{r set_p_data_for_groups_experimental_unit, warning=FALSE, eval=TRUE,echo=TRUE,message=FALSE}
-pDataSetting <- "name"
-```
-
 ## `FAUST` step three: decide on the starting cell population
 
-A `GatingSet` will often have a manual gating strategy attached to it, that records how human investigators have interrogated the flow or mass cytometry samples.
+A `gatingSet` will often have a manual gating strategy attached to it, that records how human investigators have interrogated the flow or mass cytometry samples.
 The `FAUST` pipeline benefits from using this gating information by selecting a starting cell population that has had debris and dead cells already gated out.
 If gating has not been provided, [`openCyto`](https://bioconductor.org/packages/release/bioc/html/openCyto.html)
 can be used to gate singlets and identify live cells.
@@ -238,7 +237,7 @@ save_gs(gs, path = file.path(projPath, "bcells"))
 gsPath <- file.path(projPath,"bcells")
 faust(
   gatingSet = gs,
-  pDataVar2ConcatenateSamples = "name",
+  experimentalUnit = "name",
   activeChannels = activeChannelsIn,
   channelBounds = channelBoundsIn,
   startingCellPop = startingNode,
@@ -270,7 +269,7 @@ cat(paste0("<img src='",path,"'>"))
 ```{r run_faust_to_completion, message= FALSE, results = 'hide'}
 faust(
   gatingSet = gs,
-  pDataVar2ConcatenateSamples = "name",
+  experimentalUnit = "name",
   activeChannels = activeChannelsIn,
   channelBounds = channelBoundsIn,
   startingCellPop = startingNode,
