--- a/vignettes/faustIntro.Rmd
+++ b/vignettes/faustIntro.Rmd
@@ -243,6 +243,7 @@ faust(
   debugFlag = FALSE,
   #set this to the number of threads you want to use on your system
   threadNum = parallel::detectCores() / 2 - 1,
+  nameOccuranceNum=1,
   seedValue = 271828,
   annotationsApproved = FALSE # set to false before we inspect the scores plots.
 ) 
@@ -275,6 +276,7 @@ faust(
   debugFlag = FALSE,
   #set this to the number of threads you want to use on your system
   threadNum = parallel::detectCores() / 2 - 1,
+  nameOccuranceNum=1,
   seedValue = 271828,
   annotationsApproved = TRUE
 )
@@ -317,8 +319,20 @@ ggplot(data = count.long, aes(x = sample, y = population)) +
   ggtitle("Cell counts of populations by samples") +
    theme(axis.text.x = element_text(angle = 45, hjust = 1))
 ```
+The last column is the "not annotated" subset, which **<span style="color:skyblue">faust</span>** encodes as "0_0_0_0_0".
 
-The last column is the "all-negative" subset. We're not interested in that here.
+Cells are given the generic label by **<span style="color:skyblue">faust</span>** in one of two ways.
+Each cell in each experimental unit is associated with a full annotation by **<span style="color:skyblue">faust</span>**.
+The number of times a phenotype occurs across the experimental units is counted by **<span style="color:skyblue">faust</span>**.
+If the resulting number falls below the setting of the `nameOccuranceNum` parameter in the **<span style="color:skyblue">faust</span>** function,
+all cells associated with that phenotype are labeled "0_0_0_0_0". This is how **<span style="color:skyblue">faust</span>**
+implements phenotypic filtering as described by the manuscript.
+
+All phenotypes that survive the phenotypic filtering step are then gated out sample-by-sample, relative to the annotation boundaries determined
+for their experimental unit.
+The second way a cell is labeled "0_0_0_0_0" occurs at this gating step: if the measured protein expression of a cell disagrees with the associated
+phenotype for any of the markers contained in the phenotypic label, the cell is then labeled "0_0_0_0_0". This step guarantees that the
+annotations produced by **<span style="color:skyblue">faust</span>** are consistent with the underlying protein measurements.
 
 We can generate pairwise dotplots showing the gating strategies to gate out discovered cell populations.
 Not all cell populations are meaningful (some are too small). We'll prefilter and plot those that might have some meaningful
@@ -326,7 +340,7 @@ support in the data.
 
 ```{r generate_gating_plots, warning=FALSE, eval=TRUE,echo=TRUE,message=FALSE}
 pops <- names(which(colSums(countMatrix) > 1000)) # at least 1000 cells across all samples
-pops <- setdiff(pops,"0_0_0_0_0") #We don't want the all-negative
+pops <- setdiff(pops,"0_0_0_0_0") #We don't want plots for the not-annotated cells.
 for (col in pops) {
   for (r in rownames(countMatrix)) {
     faust:::plotFaustGates(col, r, projPath)
