--- a/vignettes/faustIntro.Rmd
+++ b/vignettes/faustIntro.Rmd
@@ -21,7 +21,7 @@ knitr::opts_chunk$set(
 
 # FAUST Overview
 
-Full Annotation Using Shape-constrained Trees (FAUST) is a new method for automatically gating single-cell data from flow and mass cytometry experiments.
+Full Annotation Using Shape-constrained Trees (FAUST) is a new method for automated discovery and annotation of single-cell data from flow and mass cytometry experiments.
 
 The principal output of the pipeline is an **annotated count matrix**.
 
@@ -55,7 +55,7 @@ BiocManager::install("flowWorkspaceData", update = FALSE)
 BiocManager::install("flowWorkspace", update = FALSE)
 ```
 
-Now we install `FAUST` and its dependency, `scamp` from the FredHutch GitHub repo.
+Now we install `FAUST` and its dependency, `scamp` from the RGLab GitHub repo.
 
 ```{r install_faust, eval = FALSE}
 devtools::install_github("RGLab/scamp")
@@ -89,8 +89,9 @@ After installing and loading the `FAUST` library, the `R` function
 <code style="color:skyblue">faust</code> is available to analyze data.
 
 This function takes as input a `GatingSet` data structure.
-This data structure can be constructed available using the [`flowWorkspace`](https://bioconductor.org/packages/release/bioc/html/flowWorkspace.html) Bioconductor package.
-The gating set should contain all the experimental samples you wish to analyze using the faust pipeline.
+This data structure can be constructed using the
+[`flowWorkspace`](https://bioconductor.org/packages/release/bioc/html/flowWorkspace.html) Bioconductor package.
+The gating set should contain all the experimental samples you wish to analyze using <code style="color:skyblue">faust</code>.
 
 ### Documentation. 
 
@@ -98,7 +99,7 @@ The gating set should contain all the experimental samples you wish to analyze u
 ?faust
 ```
 The documentation provides details about many **<span style="color:skyblue">faust</span>** parameters. 
-The goal of this vignette is to demonstrate how to analyze experimental data,
+The goal of this vignette is to give an overview of how you can use **<span style="color:skyblue">faust</span>** to analyze experimental data,
 using data from the FlowCAP III Lyoplate challenge as a case-study.
 
 ## FAUST step one: construct a gating set.
@@ -119,9 +120,10 @@ plot(gs[[1]],  boolean = TRUE)
 
 ## `FAUST` step two: specify the experimental unit of anlaysis.
 
-The first parameter the user must set to use the `FAUST` method is called `experimentalUnit`.
+The first parameter the user may wish to set in order to use the `FAUST` method is called `experimentalUnit`.
 This parameter specifies how samples in the experiment should be combined in order for `FAUST` to perform discovery and annotation.
 In other words, this parameter defines the experimental unit of analysis.
+If the user does not wish to modify this parameter value, `FAUST` will use **individual samples** as the experimental unit of analysis.
 
 The samples should usually be combined so that they represent relatively homogeneous collections of samples. 
 What constitutes a homogeneous collection depends on the experimental context.
@@ -131,7 +133,7 @@ they could be grouped by batch so all samples in a batch are combined;
 or they could be combined by stimulation so that all samples under common stimulation are analyzed together;
 or they could be combined so all samples in the experiment are analyzed as a homogeneous group. 
 
-Here we run `FAUST` at the individual sample level (which is its default setting),so that each sample is analyzed separately.
+Here we run `FAUST` at the individual sample level (which is its default setting), so that cell population discovery and annotation is performed for each sample separately.
 The gating set data structure contains experimental metadata, accessed through the `pData` method.
 When applied to a gating set, `pData(gs)` returns a data frame of experimental metadata.
 The `FAUST` parameter `experimentalUnit` must be set to one of the column names in the `pData(gs)` data frame.
@@ -153,8 +155,8 @@ startingNode <- "Live"
 
 ## `FAUST` step four: decide what channels to use.
 
-The `GatingSet` records information about the *markers* used in a flow or mass cytometry experiment, as well as the 
- expression level of those markers on each single cell recored in the experiment.
+The `GatingSet` records information about the *markers* used in a flow or mass cytometry experiment,
+as well as the expression level of those markers on each single cell recorded in the experiment.
 The `FAUST` pipeline assumes that a common set of markers is available for all samples in an experiment.
 We are not required to use **all** the available markers. 
 The markers used should be passed to `FAUST` in a `character vector`.
@@ -162,7 +164,7 @@ They must **exactly** match the `desc` field of the `parameters` of the `flowFra
 `FAUST` will not run if they do not match exactly.
 
 Here we are analyzing two samples from the manually gated Lyoplate B cell data set. This data set
-as a peculiarity, in that the `markers` and `channels` are swapped. We need to swap them back in order to 
+has a peculiarity, in that the `markers` and `channels` are swapped. We need to swap them back in order to 
 get meaningful cell population phenotypes returned to us by `FAUST`. We do that below:
 
 
@@ -185,6 +187,7 @@ activeChannelsIn <- markernames(gs)[-1L]
 ## `FAUST` step five: set channel bounds.
 
 The channel bounds encode prior knowledge about the channels in the experiment.
+
 Our prior knowledge tells us about the expression level below which `FAUST` annotations should be treated as "Low" and above which `FAUST` annotations should be treated as "High". 
 For example, we would expect any cell populations with an median fluorescence intensity (MFI) below 0 in a channel to be annnotated as "Low" for that channel. 
 Similarly, cell populatins with an MFI above, say 3500 (out of 4096 in FlowJo channel space) in a channel, we would annotate as "High"
@@ -196,8 +199,12 @@ row are treated as low, by default, and not actively considered when `FAUST` pro
 Expression values in a channel greater than or equal to the value in the "High"
 row are treated as high, by default, and not actively considered when `FAUST` processes the data.
 
+If the user does not wish to set this parameter, `FAUST` will estimate values for each channel empirically: the 1st and 99th percentiles will be computed for each marker in each experimental unit,
+and the 5th and 95th percentiles across all experimental units will be used at the "Low" and "High" values for each respective marker. 
+
 Here we set the lower value to 0 and the upper value to 3500. These values are picked after inspecting
 the distribution of the data after compensation and transformation to a comparable scale.
+
 
 ```{r set_channel_bounds, warning=FALSE, eval=TRUE,echo=TRUE,message=FALSE}
 channelBoundsIn <- matrix(0,nrow=2,ncol=length(activeChannelsIn))
